<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="top"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:id="@+id/conf_login_layout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureAllChildren="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:fillViewport="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="40.0dip"
            android:paddingTop="40.0dip"
            android:paddingRight="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="24.0sp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingBottom="16.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title" />


            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="24.0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                >
                <TextView
                    android:id="@+id/enter_name"
                    android:textSize="12.0sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_prompt_name" />
                <EditText android:textSize="24.0sp"
                    android:id="@+id/name"
                    android:longClickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="200.0dip"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:hint="@string/login_prompt_name_hint"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/black"
                    android:theme="@style/AppDarkTheme"
                    android:focusedByDefault="true"
                    android:backgroundTint="@color/grey"
                    android:focusable="true"
                    />

                <TextView
                    android:id="@+id/enter_email"
                    android:textSize="12.0sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_prompt_email"/>
                <EditText android:textSize="24.0sp"
                    android:id="@+id/email"
                    android:longClickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_prompt_email_hint"
                    android:textColorHint="@color/grey"
                    android:minWidth="200.0dip"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:theme="@style/AppDarkTheme"
                    android:backgroundTint="@color/grey"
                    android:focusable="true"
                    />

                <TextView
                    android:id="@+id/enter_code"
                    android:textSize="12.0sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_prompt_otp"/>
                <EditText android:textSize="24.0sp"
                    android:id="@+id/code"
                    android:longClickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey"
                    android:minWidth="200.0dip"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:theme="@style/AppDarkTheme"
                    android:backgroundTint="@color/grey"
                    android:focusable="true"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10.0dip"
                android:text="@string/login_error_default"
                android:textColor="@color/errorTextColor"/>

            <Button
                android:id="@+id/button_next"
                android:layout_marginTop="20dp"
                android:background="@color/mesibo"
                android:textSize="14.0sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/login_button_next"
                style="@style/borderlessButtonStyle" />

            <TextView
                android:textSize="15.0sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingBottom="16.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info_webdemo"
                android:linksClickable="true" />

            <TextView
                android:textSize="15.0sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:gravity="center|start"
                android:paddingBottom="16.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info_source_code"
                android:linksClickable="true"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>